Updated application to final release version
- Standardized project artifact naming and updated to 1.0-RELEASE version
- Changed executable JAR naming convention for clarity and consistency
- Simplified `Main.java` error handling with Slf4j logging and improved setup flow
- Refactored `ApplicationRunner` to extract first savings goal correctly using `getFirst`
- Updated `StarlingClient` to not return value from `addMoneyToSavingsGoal` as it's unused
- Revised `ConfigManager` to utilize classpath resource loading for properties file
- Removed unnecessary `close` method from `UserInputHandler`
- Introduced dependency-reduced POM to manage plugin induced dependencies separately
- Enhanced `pom.xml` with additional plugins for jar packaging and code quality checks
- Adjusted Readme documentation to reflect the new way of running the application

The tweaks streamline the build process, improve the robustness of the codebase, and make the application easier to run. The cleanup of properties file handling aligns configuration management with best practices. Plus, the logging enhancements facilitate easier issue tracking in production environments.

Resolves: #42